--- a/expenseTracker/src/main/resources/templates/fragments/sidebar.html
+++ b/expenseTracker/src/main/resources/templates/fragments/sidebar.html
@@ -76,7 +76,7 @@
       </a>
     </li>
     <li class="nav-item menu-items">
-      <a class="nav-link" href="pages/forms/basic_elements.html">
+      <a class="nav-link" href="/view/chart">
         <span class="menu-icon">
           <i class="mdi mdi-chart-line"></i>
         </span>
@@ -95,7 +95,7 @@
         <ul class="nav flex-column sub-menu">
           <li class="nav-item"> <a class="nav-link" href="/settings/assets">자산 설정</a></li>
           <li class="nav-item"> <a class="nav-link" href="/settings/categories">카테고리 설정</a></li>
-          <li class="nav-item"> <a class="nav-link" href="pages/ui-features/typography.html">Typography</a></li>
+          <li class="nav-item"> <a class="nav-link" href="/settings/myInfo">개인 정보 수정</a></li>
         </ul>
       </div>
     </li>
