--- a/expenseTracker/src/main/resources/templates/index.html
+++ b/expenseTracker/src/main/resources/templates/index.html
@@ -29,6 +29,11 @@
       border: 1px solid black;
       color: black;
     }
+
+    /* 페이지네이션 버튼 스타일 */
+    .pagination {
+      margin: 2%;
+    }
   </style>
 </th:block>
 
@@ -270,15 +275,15 @@
       var currentPath = window.location.pathname;
 
       if (currentPath == "/") {
-        loadInitialData(); // 초기 데이터 로드
+        loadData(); // 초기 데이터 로드
       } else {
-        loadItems(currentPath.replace("/", ""));
+        loadData(currentPath.replace("/", ""));
       }
   });
 
-  function loadInitialData() {
+  function loadData(page) {
       $.ajax({
-          url: "/loadItems",
+          url: page ? "/loadItems/" + page : "/loadItems",
           method: "GET",
           success: function(data) {
               renderItems(data); // 데이터를 렌더링하는 함수 호출
@@ -287,22 +292,6 @@
           error: function(jqXHR, textStatus, errorThrown) {
               // 데이터를 받아오지 못한 경우 에러 처리
               console.error("Error loading initial data: " + textStatus, errorThrown);
-          }
-      });
-  }
-
-  function loadItems(page) {
-      $.ajax({
-          url: "/loadItems/" + page,
-          method: "GET",
-          contentType : "application/json",
-          success: function(data) {
-              renderItems(data); // 테이블 데이터를 렌더링
-              renderPagination(data); // 페이징 버튼 데이터 렌더링
-          },
-          error: function(jqXHR, textStatus, errorThrown) {
-              // 데이터를 받아오지 못한 경우 에러 처리
-              console.error("Error loading additional data: " + textStatus, errorThrown);
           }
       });
   }
@@ -468,12 +457,15 @@
 
   // 내역 조회
   function displayData(itemId) {
+
     $.ajax({
       url: "/transaction/view/" + itemId,
       method: "GET",
       success: function(response) {
+
         $('.displayId').val(response.id);
         $('.displayType').val(response.category.type == "INCOME" ? 'income' : 'expense');
+        $("#edit_type").trigger("change");
         $('.displayDate').val(formatDate(new Date(response.date)));
         $('.displayAmountWithWon').val(response.amount.toLocaleString('ko-KR') + '원');
         $('.displayAmount').val(response.amount.toLocaleString('ko-KR'));
@@ -492,7 +484,6 @@
   // 수정 버튼 누르면
   function enableEdit() {
     $('#dtlModal').modal('hide');
-    $("#edit_type").trigger("change");
     $('#editModal').modal('show');
   }
 </script>
