검색기능 추가

--- a/expenseTracker/src/main/resources/templates/fragments/header.html
+++ b/expenseTracker/src/main/resources/templates/fragments/header.html
@@ -11,8 +11,8 @@
     </button>
     <ul class="navbar-nav w-100">
       <li class="nav-item w-100">
-        <form class="nav-link mt-2 mt-md-0 d-none d-lg-flex search">
-          <input type="text" class="form-control" placeholder="Search products">
+        <form class="nav-link mt-2 mt-md-0 d-none d-lg-flex search" action="/">
+          <input type="text" name="searchValue" class="form-control" placeholder="Search products">
         </form>
       </li>
     </ul>
@@ -20,7 +20,6 @@
       <li class="nav-item dropdown">
         <a class="nav-link" id="profileDropdown" href="#" data-toggle="dropdown">
           <div class="navbar-profile">
-            <img class="img-xs rounded-circle" th:src="@{/images/faces/face15.jpg}" alt="">
             <p class="mb-0 d-none d-sm-block navbar-profile-name" sec:authentication="principal.name"></p>
             <i class="mdi mdi-menu-down d-none d-sm-block"></i>
           </div>
@@ -28,7 +27,7 @@
         <div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list" aria-labelledby="profileDropdown">
           <h6 class="p-3 mb-0">Profile</h6>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item preview-item">
+          <a href="/settings/myInfo" class="dropdown-item preview-item">
             <div class="preview-thumbnail">
               <div class="preview-icon bg-dark rounded-circle">
                 <i class="mdi mdi-settings text-success"></i>
@@ -49,8 +48,6 @@
               <p class="preview-subject mb-1">Log out</p>
             </div>
           </a>
-          <div class="dropdown-divider"></div>
-          <p class="p-3 mb-0 text-center">Advanced settings</p>
         </div>
       </li>
     </ul>
