--- a/expenseTracker/src/main/resources/templates/index.html
+++ b/expenseTracker/src/main/resources/templates/index.html
@@ -360,7 +360,7 @@
       var li = $("<li></li>").addClass(activeClass);
       var button = $("<button></button>")
                 .addClass(buttonClass)
-                .attr("onclick", `loadData(${currentYear}, ${currentMonth}, ${i}, ${searchValue});`)
+                .attr("onclick", `loadData(${currentYear}, ${currentMonth}, ${i}, '${searchValue}');`)
                 .attr("data-page", i - 1)
                 .text(i);
       li.append(button);
@@ -383,11 +383,11 @@
     var end = Math.min(totalPages, start + maxPage - 1);
 
     var prevLi = $("<li></li>").addClass("page-item").addClass(currentPage === 1 ? "disabled" : "");
-    var prevLink = $("<button></button>").addClass("page-link").attr("onclick", `loadData(${currentYear}, ${currentMonth}, ${currentPage - 1}, ${searchValue});`).attr("data-page", currentPage - 2).text("이전");
+    var prevLink = $("<button></button>").addClass("page-link").attr("onclick", `loadData(${currentYear}, ${currentMonth}, ${currentPage - 1}, '${searchValue}');`).attr("data-page", currentPage - 2).text("이전");
     prevLi.append(prevLink);
 
     var nextLi = $("<li></li>").addClass("page-item").addClass(currentPage === totalPages ? "disabled" : "");
-    var nextLink = $("<button></button>").addClass("page-link").attr("onclick", `loadData(${currentYear}, ${currentMonth}, ${currentPage + 1}, ${searchValue});`).attr("data-page", currentPage).text("다음");
+    var nextLink = $("<button></button>").addClass("page-link").attr("onclick", `loadData(${currentYear}, ${currentMonth}, ${currentPage + 1}, '${searchValue}');`).attr("data-page", currentPage).text("다음");
     nextLi.append(nextLink);
 
     paginationContainer.append(renderPageButtons(start, end, currentPage).prepend(prevLi).append(nextLi));
